Atualização do Formulário do Tesouro Direto

--- a/web/FormTesouroDireto.html
+++ b/web/FormTesouroDireto.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
+
 <html>
     <head>
         <title>TODO supply a title</title>
@@ -13,11 +9,21 @@ and open the template in the editor.
     <body>
         <form name="formTesouroDireto" method="POST">
             <center>
-                Valor: </br>
-                <input type="text" name="txtValor" /> </br>
-                Tempo: </br>
-                <input type="text" name="txtTempo" /> </br>
-                <input type="submit" value="Simular" /> </br>
+                Valor(R$): </br>
+                <input type="number" name="txtValor" min="0.00" step="1000" /> </br>
+                Tempo(Meses): </br>
+                <input type="number" name="txtTempo" min="1"/> </br>
+
+                Tipo: </br>
+                <select name="tipo" >
+                    <option>Selic</option>
+                    <option>IPCA</option>
+                    <option>Prefixado</option>
+                </select> </br>
+
+                </br>
+
+                <input type="submit" value="Simular" /> </br> </br>
                 <input type="text" name="txtResultado" value="Resultado" readonly="readonly" /> </br>
             </center>
         </form>
